Order message system functional